feat: Implement reminder and stop reminder commands with embed support
feat: Add server rules command with structured embeds for clarity

test: Create a test command for welcoming members and cleaning up messages

config: Add bot configuration settings for token, welcome channel, and default roles

chore: Update invite data structure for tracking invites

feat: Register and handle slash commands for help, IP, and rules

feat: Enhance welcome functionality with custom images and messages

--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.18.0",
     "canvas": "^2.11.0",
+    "child_process": "^1.0.2",
     "discord.js": "^14.11.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fs-extra": "^11.3.0",
+    "lavaplayer": "^0.0.1",
+    "opusscript": "^0.0.8",
+    "play-dl": "^1.9.7"
   },
   "keywords": [],
   "author": "",
