--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@discordjs/voice": "^0.18.0",
     "canvas": "^2.11.0",
     "child_process": "^1.0.2",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fs-extra": "^11.3.0",
     "lavaplayer": "^0.0.1",
+    "minecraft-server-util": "^5.4.4",
+    "node-mcstatus": "^1.2.1",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7"
   },
