--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^11.3.0",
     "lavaplayer": "^0.0.1",
     "minecraft-server-util": "^5.4.4",
+    "node-fetch": "^3.3.2",
     "node-mcstatus": "^1.2.1",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7"
