--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev" : "nodemon index.js"
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
@@ -21,6 +22,7 @@
     "minecraft-server-util": "^5.4.4",
     "node-fetch": "^3.3.2",
     "node-mcstatus": "^1.2.1",
+    "nodemon": "^3.1.10",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7"
   },
